# Gemstone-price-prediction-project-with-deployment

./: README.md  app.py  init_setup.sh  requirements_dev.txt  setup.cfg  setup.py  templates.py
artifacts/: model.pkl  preprocessor.pkl  test.csv
experiments/: experiments.ipynb
src/components/: data_ingestion.py  data_transformation.py
src/exception/: exception.py
src/utils/: utils.py
