[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.4
    py-youtube==1.1.7
python_requires = >=3.7

[options.extras_require]
testing =
    pytest==8.2.2
    tox==4.16.0
    black==24.4.2
    flake8==7.1.0
    mypy==1.10.1

[options.package_data]
MongoDB-Connect=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py